plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'org.kittykat'
version = '1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

application {
    mainClass = 'org.kittykat.cat65.Launcher'
}

javafx {
    version = "21.0.10"
    modules = ['javafx.controls', 'javafx.graphics']
}

// JavaFX platform artifacts (win/mac/mac-aarch64/linux/...) are resolved by
// the org.openjfx.javafxplugin from the javafx {} block above — no manual
// os.name sniffing needed.
dependencies {
    /*
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     */
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

/*
test {
    useJUnitPlatform()
}
 */

// Keep `./gradlew wrapper` regenerations reproducible and checksum-verified.
wrapper {
    gradleVersion = '8.14'
    distributionType = Wrapper.DistributionType.BIN
    distributionSha256Sum = '61ad310d3c7d3e5da131b76bbf22b5a4c0786e9d892dae8c1658d4b484de3caa'
}
